diesel_compile_tests/tests/fail/derive/no_column.stderr
error[E0412]: cannot find type `name` in module `users`
  --> $DIR/no_column.rs:13:5
   |
13 |     name: String,
   |     ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/no_column.rs:13:5
   |
13 |     name: String,
   |     ^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/no_column.rs:19:28
   |
19 |     #[diesel(column_name = name)]
   |                            ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/no_column.rs:19:28
   |
19 |     #[diesel(column_name = name)]
   |                            ^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/no_column.rs:25:41
   |
25 | struct UserTuple(#[diesel(column_name = name)] String);
   |                                         ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/no_column.rs:25:41
   |
25 | struct UserTuple(#[diesel(column_name = name)] String);
   |                                         ^^^^ not found in `users`
